feat: paging source, repository

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="app_name">RickAndMorty</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+
+    <!--    error messages-->
+    <string name="message_http_error">n unexpected error occurred</string>
+    <string name="message_internet_connecton_error">😨 Wooops No internet connection</string>
+    <string name="tv_error_message_text">No internet connection  \n Swipe to refresh</string>
 </resources>
